--- a/src/main/resources/static/restaurant1.html
+++ b/src/main/resources/static/restaurant1.html
@@ -8,52 +8,7 @@
 
 <h1>Add User</h1>
 
-<form action="#" th:action="@{/restaurant/addRestaurant}" th:object="${user}" method="post">
-    <p>
-        Name: <input type="text" th:field="*{name}">
-    </p>
-    <p>
-        Occupation: <input type="text" th:field="*{location}">
-    </p>
-    <p>
-        Name: <input type="text" th:field="*{category}">
-    </p>
-    <p>
-        <input type="submit" value="Submit"/> <input type="reset" value="Reset">
-    </p>
-</form>
-
-<form action="#{/restaurant/addRestaurant}" th:object="${user}" method="post">
-    <p>
-        Name: <input type="text" th:field="*{name}">
-    </p>
-    <p>
-        Occupation: <input type="text" th:field="*{location}">
-    </p>
-    <p>
-        Name: <input type="text" th:field="*{category}">
-    </p>
-    <p>
-        <input type="submit" value="Submit"/> <input type="reset" value="Reset">
-    </p>
-</form>
-
-<form action="#" th:object="${user}" method="post">
-    <p>
-        Name: <input type="text" th:field="*{name}">
-    </p>
-    <p>
-        Occupation: <input type="text" th:field="*{location}">
-    </p>
-    <p>
-        Name: <input type="text" th:field="*{category}">
-    </p>
-    <p>
-        <input type="submit" value="Submit"/> <input type="reset" value="Reset">
-    </p>
-</form>
-
-<form action="#" th:action="@{/restaurant/addRestaurant}" method="post">
+<form action="/RestaurantManager/somewhere_else" method="post">
     <p>
         Name: <input type="text" th:field="*{name}">
     </p>
