fix redirect attempt

--- a/src/main/resources/static/statistics.html
+++ b/src/main/resources/static/statistics.html
@@ -22,14 +22,13 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
-                    <a class="nav-link" href="http://localhost:8080/RestaurantManager-0.0.1/index.html
-">Main</a>
+                    <a class="nav-link" href="index.html">Main</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="http://localhost:8080/RestaurantManager-0.0.1/restaurant.html">Restaurants</a>
+                    <a class="nav-link" href="restaurant.html">Restaurants</a>
                 </li>
                 <li class="nav-item active">
-                    <a class="nav-link" href="http://localhost:8080/RestaurantManager-0.0.1/statistics.html">Statistics</a>
+                    <a class="nav-link" href="statistics.html">Statistics</a>
                 </li>
             </ul>
         </div>
