attempt fixing CORS issue

--- a/src/main/resources/static/restaurant.html
+++ b/src/main/resources/static/restaurant.html
@@ -40,7 +40,7 @@
          $(document).ready(function () {
             $.ajax({
                 type: 'GET',
-                url: 'http://localhost:8080/RestaurantManager-0.0.1/restaurant/list',
+                url: 'http://3.88.210.26:8080/RestaurantManager-0.0.1/restaurant/list',
                 success: function (data) {
                     var json = $.parseJSON(data);
 
