--- a/src/main/resources/static/restaurant.html
+++ b/src/main/resources/static/restaurant.html
@@ -32,6 +32,9 @@
                 <li class="nav-item active">
                     <a class="nav-link" href="statistics.html">Statistics</a>
                 </li>
+                <li class="nav-item active">
+                    <a class="nav-link" href="orders.html">Orders</a>
+                </li>
             </ul>
         </div>
     </nav>
