--- a/src/main/resources/static/orders.html
+++ b/src/main/resources/static/orders.html
@@ -80,7 +80,7 @@
 </head>
 <body>
 
-    <h1>Pending Orders</h1>
+    <h1>Pending Order</h1>
 
     <div id = "stage" style = "background-color:cc0;">
     </div>
